[package]
name = "libcypher-parser-sys"
description = "Rust ffi bindings for libcypher-parser"
version = "0.1.0"
authors = ["Kevin Oberlies <favilo@gmail.com>"]
edition = "2018"
links = "cypher-parser"
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/favilo/libcypher-parser-sys"
homepage = "https://github.com/favilo/libcypher-parser-sys"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
pkg-config = "0.3.18"
bindgen = "0.55.1"
